Add table tag and pageFontSize

--- a/test.html
+++ b/test.html
@@ -1,27 +1,16 @@
 <html>
 	<body>
-		<div>
-			<h1>It's bold text</h1>
-			<h1>It's bold text</h1>
-			<h1>It's bold text</h1>
-			<h1>It's bold text</h1>
-			<b>bold</b>
-			<b>bold</b>
-			<b>bold</b>
-			<div>
-				<h1>It's bold text</h1>
-				<div>
-					<h1>It's bold text</h1>
-					<div>
-						<h1>It's bold text</h1>
-						<div>
-							<h1>It's bold text</h1>
-						</div>
-						<div><b>test</b></div>
-						<div><b>test</b></div>
-					</div>
-				</div>
-			</div>
-		</div>
+        <table>
+            <tr>
+                <td>jAaaa</td>
+                <td>j</td>
+                <td>a</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+            </tr>
+        </table>
 	</body>
 </html>
