Fixed table column width and add margin to h1-h6

--- a/test.html
+++ b/test.html
@@ -12,5 +12,13 @@
                 <td>6</td>
             </tr>
         </table>
+        <div>
+            <h1>H1 test</h1>
+            <h2>H2 test</h2>
+            <h3>H3 test</h3>
+            <h4>H4 test</h4>
+            <h5>H5 test</h5>
+            <h6>H6 test</h6>
+        </div>
 	</body>
 </html>
