Add support ul, ol tags

--- a/test.html
+++ b/test.html
@@ -1,5 +1,21 @@
 <html>
 	<body>
+        <div>
+            <a>test a</a>
+            <p>Test paragraph with <b>bold</b> and <i>italic</i>. Test <span>span</span> tag</p>
+            <p>Test <i>italic</i> after tag</p>
+            <b>test space bold</b>
+        </div>
+        <div>
+            <ul>
+                <li>first</li>
+                <li>second</li>
+            </ul>
+            <ol>
+                <li>first</li>
+                <li>second</li>
+            </ol>
+        </div>
         <table>
             <tr>
                 <td>jAaaa</td>
